# pc-reviewer

./: .gitignore  AGENTS.md  README.md  cleanup_plan_sanitized.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/prompts/: pc-review.prompt.md
.github/workflows/: ci.yml
custom-gpt/: prompt.md
src/: __init__.py  logging_middleware.py  mcp_http_bridge.py  mcp_server.py
src/tools/: __init__.py  common.py  docker_tools.py  exec_tool.py  fs_tools.py  pkg_tools.py  proc_tools.py  test_mcp_ws.py
tests/: test_common.py  test_docker_tools.py  test_exec_tool.py  test_fs_tools.py  test_logging_middleware.py  test_mcp_server.py  test_pkg_tools.py  test_proc_tools.py
